# job_search_os

./: .env  .env.example  .gitignore  AGENTS.md  INSTRUCTIONS.md  alembic.ini  config.yaml  jobsearch.db  pyproject.toml
alembic/: env.py
alembic/versions/: 2f6f8f8f4b76_add_feedback_and_embedding_columns.py  7c84c33c9e01_add_pipeline_tables.py  f783c1d0b760_create_jobs_table.py
config/: company_ats_map.yaml
jobsearch/: __init__.py  alerts.py  codex_client.py  config.py  db.py  embeddings.py  feedback.py  models.py  pipeline.py  prompts.py  reranker.py  resume.py  scheduler.py  scorer.py  scraper.py  sheets.py
jobsearch/bot/: __init__.py  commands.py  main.py
jobsearch/scrapers/: __init__.py  ats_scraper.py  llm_parser.py  serp_scraper.py
scripts/: audit_scores.py  inspect_data.py  rescore_all.py  reset_embeddings.py  seed.py  seed_ats_map.py
