[project]
name = "job-search-os"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2,<3",
    "python-jobspy>=1.1.82",
    "python-telegram-bot[job-queue]>=20,<21",
    "pyyaml>=6,<7",
    "sqlalchemy>=2,<3",
    "structlog>=24,<26",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jobsearch"
module-root = ""
